# puregym_qr

./: Cargo.toml  LICENSE  README.md  secrets.json.example
src/: api.rs  bot_lib.rs  lib.rs
